[project]
name = "session1"
version = "0.1.0"
description = "AI Vision Explorer - Advanced Computer Vision Analysis with Grad-CAM Interpretability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "scipy>=1.15.3",
    "streamlit>=1.48.1",
    "torch>=2.8.0+cpu",
    "torchvision>=0.23.0+cpu",
    "plotly>=5.18.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ai-vision-explorer"
"Bug Tracker" = "https://github.com/yourusername/ai-vision-explorer/issues"

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"
